--- a/public/practice.html
+++ b/public/practice.html
@@ -53,7 +53,7 @@
     <!-- Firebase SDKs -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getAuth, signInAnonymously, onAuthStateChanged, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
         // --- FIREBASE CONFIGURATION (Environment Aware) ---
@@ -66,6 +66,9 @@
         // Make DB available globally
         window.db = db;
         window.addDoc = addDoc;
+        window.getDocs = getDocs;
+        window.deleteDoc = deleteDoc;
+        window.doc = doc;
         window.collection = collection;
         window.serverTimestamp = serverTimestamp;
         window.appId = appId;
@@ -171,7 +174,10 @@
             editingId: null,
             showCustomForm: false,
             stationEditId: null,
-            showSplitSelector: false
+            showSplitSelector: false,
+            history: [],
+            showHistory: false,
+            isLoadingHistory: false
         };
 
         const STORAGE_KEY = 'wrestling-system-v5';
@@ -227,8 +233,23 @@
 
         // --- Logic ---
         async function startPractice() {
-            // 1. Save to Firebase
+            // 1. Save to Firebase (Autosave when starting)
+            savePracticePlan(false); // false means don't show specific save success alert, just log it
+
+            // 2. Start the Timer UI
+            state.mode = 'live';
+            state.currentActivityIndex = 0;
+            state.elapsedSeconds = 0;
+            render();
+            startTimer();
+        }
+
+        // Separate Save Function
+        async function savePracticePlan(showAlert = true) {
             if (window.currentUser && window.db) {
+                const btn = document.getElementById('save-plan-btn');
+                if(btn && showAlert) { btn.innerText = "Saving..."; btn.disabled = true; }
+                
                 try {
                     // Save to user's private collection
                     const path = window.collection(window.db, "artifacts", window.appId, "users", window.currentUser.uid, "practice_plans");
@@ -241,21 +262,66 @@
                         timestamp: window.serverTimestamp(),
                         createdAt: new Date().toISOString()
                     });
-                    showMessage('Practice Plan Saved to Cloud!', 'success');
+                    if (showAlert) showMessage('Practice Plan Saved to History!', 'success');
+                    else console.log('Practice Plan Autosaved.');
                 } catch (err) {
                     console.error("Firebase Save Error", err);
-                    showMessage('Running Offline (Save Failed)', 'error');
+                    if (showAlert) showMessage('Save Failed', 'error');
+                } finally {
+                    if(btn && showAlert) { btn.innerHTML = 'Save Plan'; btn.disabled = false; }
                 }
             } else {
-                showMessage('Running Offline', 'info');
+                if (showAlert) showMessage('Running Offline (Cannot Save)', 'info');
             }
+        }
 
-            // 2. Start the Timer UI
-            state.mode = 'live';
-            state.currentActivityIndex = 0;
-            state.elapsedSeconds = 0;
-            render();
-            startTimer();
+        // --- History Logic ---
+        async function fetchHistory() {
+            if (!window.currentUser) { showMessage('Login required for history', 'error'); return; }
+            state.isLoadingHistory = true;
+            render(); 
+            try {
+                const path = window.collection(window.db, "artifacts", window.appId, "users", window.currentUser.uid, "practice_plans");
+                const snapshot = await window.getDocs(path);
+                const plans = [];
+                snapshot.forEach(doc => plans.push({ id: doc.id, ...doc.data() }));
+                // Sort by timestamp desc (newest first)
+                plans.sort((a, b) => (b.timestamp?.seconds || 0) - (a.timestamp?.seconds || 0));
+                state.history = plans;
+                state.showHistory = true;
+            } catch (e) {
+                console.error(e);
+                showMessage('Failed to load history', 'error');
+            } finally {
+                state.isLoadingHistory = false;
+                render();
+            }
+        }
+
+        function loadHistoryItem(id) {
+            const plan = state.history.find(p => p.id === id);
+            if (plan) {
+                state.activities = plan.activities || [];
+                // We keep today's date for reuse, unless you specifically want the old date
+                state.setupStep = 'schedule';
+                state.showHistory = false;
+                showMessage('Plan loaded successfully!', 'success');
+                render();
+            }
+        }
+
+        async function deleteHistoryItem(id) {
+            if (!confirm('Are you sure you want to delete this plan?')) return;
+            try {
+                const docRef = window.doc(window.db, "artifacts", window.appId, "users", window.currentUser.uid, "practice_plans", id);
+                await window.deleteDoc(docRef);
+                state.history = state.history.filter(h => h.id !== id);
+                render();
+                showMessage('Plan deleted', 'success');
+            } catch(e) {
+                console.error(e);
+                showMessage('Delete failed', 'error');
+            }
         }
 
         async function uploadToCalendar() {
@@ -437,6 +503,7 @@
                     </nav>
                     <main class="max-w-7xl mx-auto p-4 md:p-8 w-full flex-1">${content}</main>
                 </div>
+                ${state.showHistory ? renderHistoryModal() : ''}
             `;
         }
 
@@ -481,7 +548,7 @@
                     <!-- Bottom Row: Session Type Options -->
                     <div class="bg-gray-800 p-8 rounded-3xl border-2 border-white/10 shadow-xl">
                         <h2 class="text-2xl font-black uppercase text-white italic mb-6">Start with a Template</h2>
-                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-4">
                             <button onclick="state.activities=[];showMessage('Empty practice created');state.setupStep='activities';render();" class="p-6 bg-gray-900 rounded-2xl border-2 border-blue-500/20 hover:border-blue-500 text-center transition-all group active:scale-95">
                                 <div class="text-blue-400 font-black mb-2 group-hover:scale-110 transition-transform">TEAM PRACTICE</div>
                                 <div class="text-[10px] opacity-40 uppercase font-bold tracking-widest">Manual Builder</div>
@@ -497,6 +564,11 @@
                             <button onclick="loadTemplate('comp-cooldown')" class="p-6 bg-gray-900 rounded-2xl border-2 border-cyan-400/20 hover:border-cyan-400 text-center transition-all group active:scale-95">
                                 <div class="text-cyan-400 font-black mb-2 group-hover:scale-110 transition-transform">COMP COOLDOWN</div>
                                 <div class="text-[10px] opacity-40 uppercase font-bold tracking-widest">Recovery Flow</div>
+                            </button>
+                            <!-- HISTORY BUTTON -->
+                            <button onclick="fetchHistory()" class="p-6 bg-gray-900 rounded-2xl border-2 border-purple-500/20 hover:border-purple-500 text-center transition-all group active:scale-95">
+                                <div class="text-purple-500 font-black mb-2 group-hover:scale-110 transition-transform">HISTORY</div>
+                                <div class="text-[10px] opacity-40 uppercase font-bold tracking-widest">Load Past Plan</div>
                             </button>
                         </div>
                     </div>
@@ -561,7 +633,10 @@
                             <div class="text-xs font-bold uppercase text-gray-400 mt-1">${state.activities.length} Drills Organized • ${getTotalDuration()} Minutes Total</div>
                         </div>
                         <div class="flex gap-2">
-                            <!-- NEW BUTTON HERE -->
+                             <!-- NEW BUTTON HERE -->
+                             <button id="save-plan-btn" onclick="savePracticePlan()" class="bg-gray-700 text-white px-6 py-3 rounded-2xl font-black uppercase text-sm hover:bg-gray-600 transition-all flex items-center gap-2 shadow-lg border border-white/20">
+                                Save Plan
+                            </button>
                             <button id="cal-upload-btn" onclick="uploadToCalendar()" class="bg-blue-600 text-white px-6 py-3 rounded-2xl font-black uppercase text-sm hover:bg-blue-500 transition-all flex items-center gap-2 shadow-lg">
                                 Upload to Calendar
                             </button>
@@ -677,6 +752,51 @@
                         </div>
                         <div class="p-8 overflow-y-auto custom-scrollbar grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3">
                             ${all.map(a => `<button onclick="assignToStation(${aidx}, ${gidx}, '${a.id}')" class="p-5 bg-gray-900 rounded-2xl text-left hover:bg-blue-600 transition-all border border-white/5 group shadow-md"><div class="text-[10px] uppercase font-black opacity-30 group-hover:opacity-100">${a.category}</div><div class="font-black text-xs uppercase mt-1">${a.title}</div></button>`).join('')}
+                        </div>
+                    </div>
+                </div>
+            `;
+        }
+
+        function renderHistoryModal() {
+            return `
+                <div class="fixed inset-0 z-[120] flex items-center justify-center p-4 bg-black/90 backdrop-blur-md">
+                    <div class="bg-gray-800 rounded-[3rem] border-4 border-purple-500 w-full max-w-4xl max-h-[85vh] flex flex-col shadow-[0_0_50px_rgba(168,85,247,0.3)]">
+                        <div class="p-8 border-b border-white/10 flex justify-between items-center bg-gray-900/50 rounded-t-[3rem]">
+                            <div>
+                                <h3 class="text-4xl font-black uppercase italic text-purple-400 tracking-tighter">Practice History</h3>
+                                <p class="text-xs opacity-50 mt-1 uppercase tracking-widest">Select a past plan to load</p>
+                            </div>
+                            <button onclick="state.showHistory=false;render();" class="p-4 bg-gray-900 rounded-full hover:bg-gray-700 transition-colors">✕</button>
+                        </div>
+                        <div class="p-8 overflow-y-auto custom-scrollbar space-y-4">
+                            ${state.isLoadingHistory ? '<div class="text-center py-10 opacity-50 animate-pulse">Loading history...</div>' : ''}
+                            
+                            ${!state.isLoadingHistory && state.history.length === 0 ? '<div class="text-center py-20 opacity-30 uppercase font-black tracking-widest">No saved practices found</div>' : ''}
+
+                            ${state.history.map(plan => {
+                                const activitySummary = plan.activities.slice(0, 3).map(a => a.type === 'station' ? 'Stations' : a.title).join(', ') + (plan.activities.length > 3 ? ` + ${plan.activities.length - 3} more` : '');
+                                return `
+                                    <div class="bg-gray-900 p-6 rounded-2xl border border-white/5 flex flex-col md:flex-row justify-between items-center gap-6 group hover:border-purple-500 transition-all">
+                                        <div class="flex-1 text-center md:text-left">
+                                            <div class="flex items-center justify-center md:justify-start gap-3 mb-1">
+                                                <div class="font-black text-xl uppercase text-white">${plan.date || 'Unknown Date'}</div>
+                                                <div class="text-xs font-bold px-2 py-1 bg-gray-800 rounded text-purple-400">${plan.totalDuration}m</div>
+                                            </div>
+                                            <div class="text-sm opacity-60 uppercase font-bold tracking-wide text-gray-400">${activitySummary}</div>
+                                            <div class="text-[10px] opacity-30 mt-2 font-mono">ID: ${plan.id.substring(0,8)}...</div>
+                                        </div>
+                                        <div class="flex gap-3">
+                                            <button onclick="deleteHistoryItem('${plan.id}')" class="px-4 py-3 bg-gray-800 hover:bg-red-900/50 text-red-500 rounded-xl font-bold uppercase text-xs transition-colors border border-transparent hover:border-red-500/50">
+                                                Delete
+                                            </button>
+                                            <button onclick="loadHistoryItem('${plan.id}')" class="px-8 py-3 bg-purple-600 hover:bg-purple-500 text-white rounded-xl font-black uppercase text-sm transition-all shadow-lg shadow-purple-900/20 hover:scale-105 active:scale-95">
+                                                Load Plan
+                                            </button>
+                                        </div>
+                                    </div>
+                                `;
+                            }).join('')}
                         </div>
                     </div>
                 </div>
